# dokpool-plone

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .hgignore  .pre-commit-config.yaml  .prettierignore  .project  .travis.yml  CHANGES.rst  Dockerfile.oel7  Dockerfile.standalone  Dockerfile_transfer.db  Dockerfile_varnish.oel7  Makefile  README.md  docker-compose-init.yml  docker-compose-run.yml  docker-compose.yml  jenkins.sh  netzbetreiber.txt  repository.toml  travis.yml  umweltbereich.txt  umweltbereichID.txt
backend/: .coveragerc  .dockerignore  .envrc  .flake8  .gitignore  Dockerfile  Dockerfile.acceptance  Makefile  buildout.cfg  buildout_docker_so.cfg  buildout_macos.cfg  config-template.cfg.tmpl  constraints.txt  develop-multidb.cfg  import.cfg  instance.yaml  instance_relstorage.yaml  local.cfg  macos.md  mx.ini  mx_develop.ini  package-lock.json  package.json  packages.cfg  pipenv-install.sh  prod-koala.cfg  pyproject.toml  relstorage.cfg  requirements-docker.txt  requirements.txt  requirements_develop.txt  version.txt  webpack.config.js
backend/buildout.d/templates/: varnish-director.vcl  varnish.vcl  zodbpack.conf.tmpl
backend/docs/: checks.md  development.md  docker.md  install.md
backend/helper/: transform_from_environment.py
backend/scripts/: build_demo_site.sh  create_site.py  default.json  update_locales.py
backend/src/docpool.api/: setup.py
backend/src/docpool.api/docs/: index.rst
backend/src/docpool.base/: setup.py
backend/src/docpool.base/docpool/base/: __init__.py  appregistration.py  appregistry.py  config.py  configure.zcml  events.py  interfaces.py  marker.py  monkey.py  monkey.zcml  overrides.zcml  pdfconversion.py  permissions.py  setuphandlers.py  skins.zcml  testing.py  upgrades.py  upgrades.zcml  utils.py  vocabularies.py
backend/src/docpool.config/: CHANGES.rst  MANIFEST.in  setup.py
backend/src/docpool.config/docpool/config/: setuphandlers.py  utils.py
backend/src/docpool.config/docs/: LICENSE.rst
backend/src/docpool.distribution/: README.md  setup.py
backend/src/docpool.distribution/tests/: conftest.py
backend/src/docpool.distribution/tests/setup/: test_setup_install.py  test_setup_uninstall.py
backend/src/docpool.doksys/: CONTRIBUTORS.rst  setup.py
backend/src/docpool.doksys/docs/: index.rst
backend/src/docpool.elan/: setup.py
backend/src/docpool.elan/docpool/elan/: appregistration.py  caching.py  config.py  configure.zcml  interfaces.py  monkey.py  testing.py  upgrades.py  upgrades.zcml  utils.py  vocabularies.py
backend/src/docpool.rei/: README.md
backend/src/docpool.rei/docpool/rei/: appregistration.py  config.py  configure.zcml  indexer.py  skins.zcml  testing.py  vocabularies.py
backend/src/docpool.rodos/docpool/rodos/: __init__.py  (+5 more)
backend/src/docpool.theme/: setup.py
backend/src/docpool.theme/docs/: INSTALL.txt
backend/src/docpoolwrapper/: __init__.py
backend/src/elan.journal/: README.md
backend/templates/: i18n-plone-configure.zcml  zope.ini
(+3520 files in other folders)
