[project]
name = "docpoolwrapper"
dynamic = ["version"]
description = "Dokpool is a CMS based on Plone 6, a website developed for handling documents in multiple contexts, using several editorial roles and workflows."
license = "GPL-2.0-only"
requires-python = ">=3.12"
authors = [
    { name = "Starzel.de for Bundesamt für Strahlenschutz", email = "info@starzel.de" },
]
keywords = [
    "CMS",
    "Plone",
    "Python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Plone","Framework :: Plone :: 6.1",
    "Framework :: Plone :: Addon",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python","Programming Language :: Python :: 3.12",
]
dependencies = [
    "Products.CMFPlone==6.1.3",
    "plone.api",
    "plone.restapi",
    "pyruvate==1.5.0",
    "Products.PloneKeywordManager",
    "pas.plugins.ldap",
    "eea.facetednavigation",
    "collective.impersonate",
    "RelStorage",
    "psycopg2",
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "Products.PDBDebugMode",
]

[project.urls]
Homepage = "https://github.com/OpenBfS/dokpool-plone"
Source = "https://github.com/OpenBfS/dokpool-plone"
Tracker = "https://github.com/OpenBfS/dokpool-plone/issues"


[project.entry-points."plone.autoinclude.plugin"]
target = "plone"

[tool.uv]
managed = false

[tool.hatch.version]
path = "src/docpoolwrapper/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docpoolwrapper"]

[tool.ruff]
target-version = "py312"
line-length = 110
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    # "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    # "A",
    # flake8-comprehensions
    # "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
    # mccabe
    # "C90",
    # pycodestyle
    # "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    # "UP",
    # ruff
    # "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".flake8",
    "dependabot.yml",
    "mx.ini",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["docpoolwrapper", "tests"]
branch = true
parallel = true
omit = [
  "src/docpoolwrapper/locales/*.py",
]
